--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
-
+    implementation 'de.hdodenhof:circleimageview:2.2.0' //동그랗게 이미지 넣기
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
