--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,14 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/logo"
-        android:label="@string/app_name"
+        android:label="MJDonor"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
+            android:label="My App"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +28,15 @@
         </activity>
 
         <activity android:name=".LoginActivity"
+            android:exported="true">
+        </activity>
+        <activity android:name=".Fragment1"
+            android:exported="true">
+        </activity>
+        <activity android:name=".Fragment2"
+            android:exported="true">
+        </activity>
+        <activity android:name=".Fragment3"
             android:exported="true">
         </activity>
     </application>
