--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,14 @@
         <activity android:name=".Fragment3"
             android:exported="true">
         </activity>
+        <activity android:name=".DonSelectActivity"
+            android:exported="true">
+        </activity>
+        <activity android:name=".DonInputActivity"
+            android:exported="true">
+        </activity>
+
+
     </application>
 
 </manifest>
