--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="My App"
+            android:label="MJDonor"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,14 +39,16 @@
         <activity android:name=".Fragment3"
             android:exported="true">
         </activity>
+
+        <activity android:name=".Fragment4"
+            android:exported="true">
+        </activity>
         <activity android:name=".DonSelectActivity"
             android:exported="true">
         </activity>
         <activity android:name=".DonInputActivity"
             android:exported="true">
         </activity>
-
-
     </application>
 
 </manifest>
