--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,14 @@
             android:exported="true">
         </activity>
 
+        <activity android:name=".RegisterActivity"
+            android:exported="true">
+        </activity>
+
+        <activity android:name=".RegisterCardActivity"
+            android:exported="true">
+        </activity>
+
         <activity android:name=".LoginActivity"
             android:exported="true">
         </activity>
