--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,10 +26,8 @@
         <activity android:name=".SignupActivity"
             android:exported="true">
         </activity>
-
         <activity android:name=".RegisterActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
 
         <activity android:name=".RegisterCardActivity"
             android:exported="true">
