feat : 기부 결제 과정 전체 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,9 @@
         <activity android:name=".DonatePayActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".DonatedCardActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
