feat : 기부 명지나무 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,9 @@
         <activity android:name=".DonatedCardActivity"
             android:exported="true">
         </activity>
+        <activity android:name=".DonationTree"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
