feat : 회원가입 stepper구현, 로그인 버튼 백그라운드

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.github.shuhart:stepview:1.5.1'//회원가입 stepper
     implementation 'androidx.viewpager2:viewpager2:1.0.0' //캐러셀
     implementation 'me.relex:circleindicator:2.1.6' //캐러셀
     implementation 'de.hdodenhof:circleimageview:2.2.0' //동그랗게 이미지 넣기
