--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
         <activity android:name=".SignupActivity"
             android:exported="true">
         </activity>
+
+        <activity android:name=".SignupStepActivity"
+            android:exported="true">
+        </activity>
+
         <activity android:name=".RegisterActivity"
             android:exported="true" />
 
