feat : splash 화면 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         tools:targetApi="25">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:label="MJDonor"
             android:exported="true">
             <intent-filter>
@@ -21,6 +21,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".MainActivity"
+            android:exported="true">
         </activity>
 
         <activity android:name=".SignupActivity"
