--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,17 +37,12 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
-
-
-
-
-
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.shuhart:stepview:1.5.1'//회원가입 stepper
     implementation 'androidx.viewpager2:viewpager2:1.0.0' //캐러셀
