--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-}
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'}
